--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <div class="header">
+      <div class="header-logo">Header Logo</div>
+      <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
+      </ul>
+  </div>
+  <div class="top">
+      <div class="title">
+          <div class="main-text">This website is awesome</div>
+          <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+          <button class="Sign-up">Sign up</button>
+      </div>
+      <div class="placeholder">this is placeholder for an image</div>
+  </div>    
 </body>
 </html>
