--- a/index.html
+++ b/index.html
@@ -23,6 +23,29 @@
           <button class="Sign-up">Sign up</button>
       </div>
       <div class="placeholder">this is placeholder for an image</div>
-  </div>    
+  </div>
+  <div class="middle">
+      <div class="middle-title">Some random information.</div>
+      <div class="info">
+          <div class="empty-space"></div>
+          <div class="subtext">this is some subtext under an image</div>
+      </div>
+      <div class="info">
+        <div class="empty-space"></div>
+        <div class="subtext">this is some subtext under an image</div>
+      </div>
+      <div class="info">
+        <div class="empty-space"></div>
+        <div class="subtext">this is some subtext under an image</div>
+      </div>
+      <div class="info">
+        <div class="empty-space"></div>
+        <div class="subtext">this is some subtext under an image</div>
+      </div>
+    </div>
+    <div class="quote-section">
+        <div class="quote">This is an insipiring, quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="cite">-Thor, God of Thunder</div>
+    </div> 
 </body>
 </html>
