Add call-to-action and footer sections to html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
     <div class="quote-section">
         <div class="quote">This is an insipiring, quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="cite">-Thor, God of Thunder</div>
-    </div> 
+    </div>
+    <div class="call-to-action">
+        <div class="call-left">
+          <div class="call-title">Call to action!It's time!</div>
+          <div class="subtext">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="Sign-up">Sign up</button>
+    </div>
+    <div class="footer">Copyright <span>&copy;</span> The Odin Project 2022</div> 
 </body>
 </html>
