--- a/index.html
+++ b/index.html
@@ -19,28 +19,30 @@
   <div class="top">
       <div class="title">
           <div class="main-text">This website is awesome</div>
-          <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+          <div class="sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
           <button class="Sign-up">Sign up</button>
       </div>
       <div class="placeholder">this is placeholder for an image</div>
   </div>
   <div class="middle">
       <div class="middle-title">Some random information.</div>
-      <div class="info">
+      <div class="middle-space">
+        <div class="info">
+            <div class="empty-space"></div>
+            <div class="subtext">this is some subtext under an image</div>
+        </div>
+        <div class="info">
           <div class="empty-space"></div>
           <div class="subtext">this is some subtext under an image</div>
-      </div>
-      <div class="info">
-        <div class="empty-space"></div>
-        <div class="subtext">this is some subtext under an image</div>
-      </div>
-      <div class="info">
-        <div class="empty-space"></div>
-        <div class="subtext">this is some subtext under an image</div>
-      </div>
-      <div class="info">
-        <div class="empty-space"></div>
-        <div class="subtext">this is some subtext under an image</div>
+        </div>
+        <div class="info">
+          <div class="empty-space"></div>
+          <div class="subtext">this is some subtext under an image</div>
+        </div>
+        <div class="info">
+          <div class="empty-space"></div>
+          <div class="subtext">this is some subtext under an image</div>
+        </div>
       </div>
     </div>
     <div class="quote-section">
