--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="title">
           <div class="main-text">This website is awesome</div>
           <div class="sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-          <button class="Sign-up">Sign up</button>
+          <button class="sign-up">Sign up</button>
       </div>
       <div class="placeholder">this is placeholder for an image</div>
   </div>
@@ -54,7 +54,7 @@
           <div class="call-title">Call to action! It's time!</div>
           <div class="subtext">Sign up for our product by clicking that button right over there!</div>
         </div>
-        <button class="Sign-up">Sign up</button>
+        <button class="signup">Sign up</button>
     </div>
     <div class="footer">Copyright <span>&copy;</span> The Odin Project 2022</div> 
 </body>
