Add pading for some sections

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
       <div class="middle-space">
         <div class="info">
             <div class="empty-space"></div>
-            <div class="subtext">this is some subtext under an image</div>
+            <div class="subtext">this is some subtext under an illustration or image</div>
         </div>
         <div class="info">
           <div class="empty-space"></div>
-          <div class="subtext">this is some subtext under an image</div>
+          <div class="subtext">this is some subtext under an illustration or image</div>
         </div>
         <div class="info">
           <div class="empty-space"></div>
-          <div class="subtext">this is some subtext under an image</div>
+          <div class="subtext">this is some subtext under an illustration or image</div>
         </div>
         <div class="info">
           <div class="empty-space"></div>
-          <div class="subtext">this is some subtext under an image</div>
+          <div class="subtext">this is some subtext under an illustration or image</div>
         </div>
       </div>
     </div>
